--- a/Fib_bench_java/.settings/org.eclipse.wst.common.component
+++ b/Fib_bench_java/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="Fib_bench_java">
+    <wb-module deploy-name="java_benchs">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="Fib_bench_java"/>
-        <property name="java-output-path" value="/Fib_bench_java/build/classes"/>
+        <property name="java-output-path" value="/java_benchs/build/classes"/>
+        <property name="context-root" value="java_benchs"/>
     </wb-module>
 </project-modules>
